change subheader and promo

--- a/src/Index.html
+++ b/src/Index.html
@@ -14,63 +14,67 @@
 <body>
   <header>
     <nav>
-      <div class="container">
-        <ul class="menu">
-          <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-          <li class="menu_item"><a href="#  " class="menu_link">Оставить заявку</a></li>
-        </ul>
-      </div>
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
+        <div class="container">
+            <ul class="menu">
+                <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                <li class="menu_item"><a href="#require" class="menu_link">Со своим автомобилем</a></li>
+                <li class="menu_item"><a href="#require" class="menu_link">На автомобиле компании</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+            </ul>
+        </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
-  </header>
-  <div class="subheader">
-    <div class="container">
-      <div class="row">
-        
-        <div class="col-6 col-md-4 offset-md-1">
-          <div class="uber">
-            <img src="icons/logo.png" alt="logo">uber777.moscow
-          </div>
-          <div class="official">Официальный партнер Uber в Москве</div>
-        </div>
+    <div class="subheader">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-4 offset-md-1">
+                    <a href="#" class="subheader_logo">
+                      <img src="icons/logo.png" alt="logo">
+                      <div class="subheader_link"></div>
+                    </a>
+                    <div class="subheader_official">Официальный партнер Uber в Москве</div>
+                </div>
 
-        <div class="col-md-3 offset-md-1 xs-hidden col-xl-2 offset-xl-2">
-          <div class="call">Звоните нам ежедневно</div>
-          <a href="tel:84957970988" class="call_numb">8 495 797 09 88</a>
-        </div>
+                <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
+                    <div class="subheader_call">Звоните нам ежедневно</div>
+                    <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                </div>
 
-        <div class="col-6 col-md-3">
-          <a href="tel:84957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
-          <button class="call_btn">заказать звонок</button>
+                <div class="col-6 col-md-3">
+                    <a href="tel:84957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
+                    <button class="subheader_btn">заказать звонок</button>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <section class="first">
-    <div class="container">
-      <h1>КОМПАНИЯ UBER PARTNERS!</h1>
-      <h2>ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+</header>
 
-      <div class="first_text">
-        Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди
-        таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном
-        кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за
-        пиковое время.
-        <br><br>
-        Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве. Водители у нас
-        зарабатывают от 80000- 120000 в месяц.
-      </div>
-      <button class="first_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+<section class="promo">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
+                <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+                <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                <div class="promo_descr">
+                    Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди
+                    таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за
+                    пиковое время.
+                    <br><br>
+                    Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас
+                    зарабатывают от 80000- 120000 в месяц.
+                </div>
+                <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+            </div>
+        </div>
     </div>
-  </section>
+</section>
+
   <section class="reason">
     <div class="container">
       <div class="lable">преимущества</div>
@@ -183,6 +187,7 @@
         </div>
       </div>
   </section>
+
   <section class="mob">
     <div class="container">
       <div class="lable">возможности</div>
@@ -231,6 +236,7 @@
     </div>
 
   </section>
+
   <section class="car">
     <div class="conatiner">
       <div class="lable">Возможности</div>
@@ -241,6 +247,7 @@
         Лучше, быстрее и дешевле, чем такси</div>
     </div>
   </section>
+
   <section class="require">
     <div class="container">
       <div class="lable">возможности</div>
@@ -291,6 +298,7 @@
       </div>
     </div>
   </section>
+
   <section class="city">
     <div class="container">
       <div class="lable">города</div>
@@ -299,6 +307,7 @@
       <div class="link"><a href="#">посмотреть все города</a></div>
     </div>
   </section>
+
   <footer>
     <div class="footer_divider"></div>
     <div class="footer_wrapper">
@@ -335,7 +344,7 @@
           <a href="#" class="footer_links_lang">Русский</a>
         </div>
       </div>
-      <div> 
+      <div>
         <div class="footer_mobile">
           <a href="#">
             <img src="img/appstore.png" alt="App Store">
@@ -350,9 +359,11 @@
       </div>
     </div>
   </footer>
+
   <div class="back">
     <a href="https://www.maximyut.com"><img src="icons/M.png" alt="logo"></a>
-</div>
+  </div>
+
   <script src="js/mail.js"></script>
   <script src="js/script.js"></script>
 </body>
